# ds-assignments

./: .gitignore  create-zip.sh  przemyslenia.txt  sr-pytanie-atomic-register.txt
dsassignment1/: pytania.txt
dsassignment1-roboczy/public-tests/: Cargo.toml
dsassignment1-roboczy/public-tests/tests/: modules.rs  silnia.rs
dsassignment1-roboczy/solution/: lib.rs
dsassignment1/public-tests/: Cargo.toml
dsassignment1/public-tests/tests/: modules.rs  silnia.rs
dsassignment1/solution/: Cargo.toml  lib.rs
dslab01/: Cargo.toml  dslab01.tgz  main.rs  solution.rs
dslab02/: Cargo.toml  main.rs  original_solution.rs  public_test.rs  solution.rs  test_baryla.rs
dslab02/examples/: drop.rs
dslab03/: solution.rs
dslab04/: Cargo.toml
dslab04/examples/: async_channel.rs  async_trait.rs  asynchronous.rs  futures.rs  tokio.rs  tokio_test.rs
dslab05/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab05/examples/: aes_cbc.rs  hmac.rs
dslab05/examples/rustls/: main.rs
dslab05/examples/tcp-communication/: main.rs
dslab05/examples/udp-communication/: client.rs  main.rs
dslab06/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab08/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab09/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab10-badochov-solution/: Cargo.toml  public_test.rs  solution.rs
dslab12/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab13/: Cargo.toml  main.rs  public_test.rs  solution.rs
dslab14/: Cargo.toml  main.rs  public_test.rs  solution.rs
la1/solution/: lib.rs
la2/: notatki.txt  pytania.txt  run-vm.sh
la2/public-tests/: Cargo.toml
la2/public-tests/tests/: atomic_register.rs  system.rs  transfer.rs
la2/solution/: Cargo.toml
la2/solution/src/: algorithm.txt  atomic_register_public.rs  domain.rs  lib.rs  register_client_public.rs  reversible_stable_storage_public.rs  sectors_manager_public.rs  stable_storage_public.rs  transfer_public.rs  transport.rs
la2/test-utils/: Cargo.toml  atomic_register.rs  lib.rs  proxy.rs  system.rs
