[package]
name = "lab-05"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2021"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
crossbeam-channel = "0.5"
rustls = "0.20"
rustls-pemfile = "1.0"

[dev-dependencies]
ntest = "0.8"
kolmogorov_smirnov = "1.1"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
rsa = "0.7"

[[bin]]
name = "lab05"
path = "main.rs"
