[package]
name = "lab-08"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.22", features = ["full"] }
bytes = "1.3"
uuid = { version = "1.2", features = ["v4", "serde"] }
async-trait = "0.1"
log = "0.4"
async-channel = "1.7"
executor = { path = "../la1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"

[[bin]]
name = "lab08"
path = "main.rs"
