[package]
name = "lab-09"
version = "0.2.0"
authors = ["Wojciech Ciszewski <wc385540@students.mimuw.edu.pl>", "Filip Plata <fp371335@students.mimuw.edu.pl>", "Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2021"

[dependencies]
uuid = { version = "1.2", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
async-channel = "1.8"
async-trait = "0.1"
tokio = { version = "1.22", features = ["full"] }
executor = { path = "../la1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"

[[bin]]
name = "lab09"
path = "main.rs"
