[package]
name = "lab-12"
version = "0.2.0"
authors = ["Mateusz Banaszek <m.banaszek@mimuw.edu.pl"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
async-channel = "1.8"
async-trait = "0.1"
tokio = {version = "1.24", features = ["full"] }
executor = { path = "../la1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"

[[bin]]
name = "lab12"
path = "main.rs"
