[package]
name = "assignment-1-public-tests"
version = "0.1.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2021"

[dependencies]
assignment-1-solution = { path = "../solution" }
async-trait = "0.1"
tokio = {version = "1.21", features = ["full"] }
async-channel = "1.7"

[dev-dependencies]
ntest = "0.8"
