[package]
name = "assignment-2-public-tests"
version = "0.2.0"
authors = ["Filip Plata <fp371335@students.mimuw.edu.pl>", "Wojciech Ciszewski <w.ciszewski2@student.uw.edu.pl>"]
edition = "2018"

[dependencies]
tokio = {version = "1.13", features = ["full"] }
tempfile = "3.2"
env_logger = "0.9"
assignment-2-solution = { path = "../solution" }
assignment-2-test-utils = { path = "../test-utils" }
structopt = { version = "0.3" }
hex = "0.4.3"
# console-subscriber = { git = "https://github.com/tokio-rs/console" }

[dev-dependencies]
ntest = "0.7"
log = "0.4"
uuid = { version = "1.2", features = ["v4"] }
hmac = "0.11"
sha2 = "0.9"
async-trait = "0.1"
async-channel = "1.6"
futures = "0.3"
rand = "0.8"
serial_test = "0.5"

[[bin]]
name="benchmark"
path="src/bin/benchmark/main.rs"

